examples/run_log_ascii.txt
C:\Users\weagw\OneDrive\Desktop\we# 00.1 beta\Interpreter.cs(122,23): error CS0161: 'Interpreter.Visit(ForeachStmt)': t??m kod yollar?? bir de??er d??nd??rmez [C:\Users\weagw\OneDrive\Desktop\we# 00.1 beta\we# 00.1 beta.csproj]
dotnet : 
At line:1 char:1
+ dotnet run -- test_compreh
ensive.wea > run_log.txt 2>&
1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~
    + CategoryInfo          
    : NotSpecified: (:Stri  
  ng) [], RemoteException
    + FullyQualifiedErrorId 
    : NativeCommandError
 
Derleme ba??ar??s??z oldu. D
erleme hatalar??n?? d??zelti
p yeniden ??al????t??r??n.
